# link-bubble

./: package-lock.json  package.json
Application/: build.gradle
Application/LinkBubble/: build.gradle
Application/LinkBubble/src/main/: AndroidManifest.xml.template
Application/LinkBubble/src/main/java/com/linkbubble/: Config.kt  Constant.java  Constant.kt  MainApplication.java  MainApplication.kt  MainController.java  MainController.kt  MainService.java  MainService.kt  Settings.java  Settings.kt
Application/LinkBubble/src/main/java/com/linkbubble/adblock/: ABPFilterParser.java  ABPFilterParser.kt  ADBlockUtils.kt  EtagObject.kt  WhiteListCollector.kt
Application/LinkBubble/src/main/java/com/linkbubble/adinsert/: AdInserter.kt
Application/LinkBubble/src/main/java/com/linkbubble/articlerender/: ArticleContent.kt  ArticleRenderer.kt
Application/LinkBubble/src/main/jni/: CMakeLists.txt  com_linkbubble_adblock_ABPFilterParser.h  main.cpp
Application/LinkBubble/src/main/res/drawable/: stat_bubble_background.xml
Application/LinkBubble/src/main/res/layout/: activity_history.xml  activity_home.xml  activity_settings.xml  activity_settings_default_apps.xml  activity_settings_help.xml  activity_settings_more.xml  history_item.xml  view_content.xml  view_grant_overlay_permission.xml  view_stat_time_per_link.xml  view_stat_total_time.xml
Application/LinkBubble/src/main/res/values/: colors.xml  strings.xml  styles.xml
Application/LinkBubble/src/main/res/xml/: changelog.xml  preferences.xml  preferences_more.xml
scripts/: copyJNIFiles.js
(+147 files in other folders)
